plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
    id 'org.jetbrains.kotlin.jvm'
}

group = 'cn.qfys521'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    annotationProcessor('org.projectlombok:lombok:1.18.28')
    compileOnly('org.projectlombok:lombok:1.18.28')
    implementation('com.fasterxml.jackson.core:jackson-databind:2.15.3')
    implementation('com.fasterxml.jackson.core:jackson-core:2.15.3')
    implementation('io.github.kloping:bot-qqpd-java:1.5.0-R4')
    implementation(platform('com.squareup.okhttp3:okhttp-bom:4.10.0'))
    implementation("com.squareup.okhttp3:okhttp")
    implementation("com.squareup.okhttp3:logging-interceptor")
    testImplementation platform('org.junit:junit-bom:5.9.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
}

test {
    useJUnitPlatform()
}
kotlin {
    jvmToolchain(17)
}
shadowJar {
    manifest.attributes.put("Implementation-Version", archiveVersion)
    manifest.attributes.put("Main-Class", "cn.qfys521.bot.BotApplication")
}